@@ -1,3 +1,7 @@
+2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
+
 2011-01-21  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Fixed bug #17169: Bug: Wrong color gradients for filter and new button in new page tree
